--- a/pod-security/baseline/disallow-host-path/kyverno-test.yaml
+++ b/pod-security/baseline/disallow-host-path/kyverno-test.yaml
@@ -1,11 +1,72 @@
-name:  disallow-host-path
+name: disallow-host-path
 policies:
-  -  disallow-host-path.yaml
+  - disallow-host-path.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
-  - policy:  disallow-host-path
+###### Pods - Bad
+  - policy: disallow-host-path
     rule: host-path
-    resource:  host-path
+    resource: badpod01
     kind: Pod
     result: fail
+  - policy: disallow-host-path
+    rule: host-path
+    resource: badpod02
+    kind: Pod
+    result: fail
+###### Pods - Good
+  - policy: disallow-host-path
+    rule: host-path
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: disallow-host-path
+    rule: host-path
+    resource: goodpod02
+    kind: Pod
+    result: pass
+###### Deployments - Bad
+  - policy: disallow-host-path
+    rule: host-path
+    resource: baddeployment01
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-path
+    rule: host-path
+    resource: baddeployment02
+    kind: Deployment
+    result: fail
+###### Deployments - Good
+  - policy: disallow-host-path
+    rule: host-path
+    resource: gooddeployment01
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-path
+    rule: host-path
+    resource: gooddeployment02
+    kind: Deployment
+    result: pass
+###### CronJobs - Bad
+  - policy: disallow-host-path
+    rule: host-path
+    resource: badcronjob01
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-path
+    rule: host-path
+    resource: badcronjob02
+    kind: CronJob
+    result: fail
+###### CronJobs - Good
+  - policy: disallow-host-path
+    rule: host-path
+    resource: goodcronjob01
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-path
+    rule: host-path
+    resource: goodcronjob02
+    kind: CronJob
+    result: pass
