--- a/pod-security/baseline/disallow-host-ports/kyverno-test.yaml
+++ b/pod-security/baseline/disallow-host-ports/kyverno-test.yaml
@@ -1,11 +1,312 @@
 name: disallow-host-ports
 policies:
-  -  disallow-host-ports.yaml
+  - disallow-host-ports.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
+###### Pods - Bad
   - policy: disallow-host-ports
-    rule: host-ports
-    resource: host-port
+    rule: host-ports-none
+    resource: badpod01
     kind: Pod
     result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badpod02
+    kind: Pod
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badpod03
+    kind: Pod
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badpod04
+    kind: Pod
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badpod05
+    kind: Pod
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badpod06
+    kind: Pod
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badpod07
+    kind: Pod
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badpod08
+    kind: Pod
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badpod09
+    kind: Pod
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badpod10
+    kind: Pod
+    result: fail
+###### Pods - Good
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod02
+    kind: Pod
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod03
+    kind: Pod
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod04
+    kind: Pod
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod05
+    kind: Pod
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod06
+    kind: Pod
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod07
+    kind: Pod
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod08
+    kind: Pod
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod09
+    kind: Pod
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodpod10
+    kind: Pod
+    result: pass
+###### Deployments - Bad
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment01
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment02
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment03
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment04
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment05
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment06
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment07
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment08
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment09
+    kind: Deployment
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: baddeployment10
+    kind: Deployment
+    result: fail
+###### Deployments - Good
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment01
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment02
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment03
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment04
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment05
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment06
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment07
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment08
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment09
+    kind: Deployment
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: gooddeployment10
+    kind: Deployment
+    result: pass
+###### CronJobs - Bad
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob01
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob02
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob03
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob04
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob05
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob06
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob07
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob08
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob09
+    kind: CronJob
+    result: fail
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: badcronjob10
+    kind: CronJob
+    result: fail
+###### CronJobs - Good
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob01
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob02
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob03
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob04
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob05
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob06
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob07
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob08
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob09
+    kind: CronJob
+    result: pass
+  - policy: disallow-host-ports
+    rule: host-ports-none
+    resource: goodcronjob10
+    kind: CronJob
+    result: pass
