--- a/pod-security/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
+++ b/pod-security/baseline/disallow-privileged-containers/disallow-privileged-containers.yaml
@@ -3,9 +3,12 @@ kind: ClusterPolicy
 metadata:
   name: disallow-privileged-containers
   annotations:
+    policies.kyverno.io/title: Disallow Privileged Containers
     policies.kyverno.io/category: Pod Security Standards (Baseline)
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod
+    kyverno.io/kyverno-version: 1.6.0
+    kyverno.io/kubernetes-version: "1.22-1.23"
     policies.kyverno.io/description: >-
       Privileged mode disables most security mechanisms and must not be allowed. This policy
       ensures Pods do not call for privileged mode.
@@ -13,7 +16,7 @@ spec:
   validationFailureAction: audit
   background: true
   rules:
-    - name: priviledged-containers
+    - name: privileged-containers
       match:
         resources:
           kinds:
@@ -21,9 +24,12 @@ spec:
       validate:
         message: >-
           Privileged mode is disallowed. The fields spec.containers[*].securityContext.privileged
-          and spec.initContainers[*].securityContext.privileged must not be set to true.
+          and spec.initContainers[*].securityContext.privileged must be unset or set to `false`.
         pattern:
           spec:
+            =(ephemeralContainers):
+              - =(securityContext):
+                  =(privileged): "false"
             =(initContainers):
               - =(securityContext):
                   =(privileged): "false"
