--- a/pod-security/baseline/disallow-proc-mount/kyverno-test.yaml
+++ b/pod-security/baseline/disallow-proc-mount/kyverno-test.yaml
@@ -1,11 +1,177 @@
 name: require-default-proc-mount
 policies:
-  -  disallow-proc-mount.yaml
+  - disallow-proc-mount.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
+###### Pods - Bad
   - policy: require-default-proc-mount
     rule: check-proc-mount
-    resource: nginx-proc-mount
+    resource: badpod01
     kind: Pod
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: badpod02
+    kind: Pod
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: badpod03
+    kind: Pod
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: badpod04
+    kind: Pod
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: badpod05
+    kind: Pod
+    result: fail
+###### Pods - Good
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodpod02
+    kind: Pod
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodpod03
+    kind: Pod
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodpod04
+    kind: Pod
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodpod05
+    kind: Pod
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodpod06
+    kind: Pod
+    result: pass
+###### Deployments - Bad
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: baddeployment01
+    kind: Deployment
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: baddeployment02
+    kind: Deployment
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: baddeployment03
+    kind: Deployment
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: baddeployment04
+    kind: Deployment
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: baddeployment05
+    kind: Deployment
+    result: fail
+###### Deployments - Good
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: gooddeployment01
+    kind: Deployment
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: gooddeployment02
+    kind: Deployment
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: gooddeployment03
+    kind: Deployment
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: gooddeployment04
+    kind: Deployment
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: gooddeployment05
+    kind: Deployment
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: gooddeployment06
+    kind: Deployment
+    result: pass
+###### CronJobs - Bad
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: badcronjob01
+    kind: CronJob
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: badcronjob02
+    kind: CronJob
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: badcronjob03
+    kind: CronJob
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: badcronjob04
+    kind: CronJob
+    result: fail
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: badcronjob05
+    kind: CronJob
+    result: fail
+###### CronJobs - Good
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodcronjob01
+    kind: CronJob
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodcronjob02
+    kind: CronJob
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodcronjob03
+    kind: CronJob
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodcronjob04
+    kind: CronJob
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodcronjob05
+    kind: CronJob
+    result: pass
+  - policy: require-default-proc-mount
+    rule: check-proc-mount
+    resource: goodcronjob06
+    kind: CronJob
     result: pass
