--- a/pod-security/baseline/restrict-apparmor-profiles/kyverno-test.yaml
+++ b/pod-security/baseline/restrict-apparmor-profiles/kyverno-test.yaml
@@ -1,11 +1,72 @@
 name: restrict-apparmor-profiles
 policies:
-  -  restrict-apparmor-profiles.yaml
+  - restrict-apparmor-profiles.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
+###### Pods - Bad
   - policy: restrict-apparmor-profiles
     rule: app-armor
-    resource: apparmor
+    resource: badpod01
     kind: Pod
     result: fail
+###### Pods - Good
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: goodpod02
+    kind: Pod
+    result: pass
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: goodpod03
+    kind: Pod
+    result: pass
+###### Deployments - Bad
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: baddeployment01
+    kind: Deployment
+    result: fail
+###### Deployments - Good
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: gooddeployment01
+    kind: Deployment
+    result: pass
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: gooddeployment02
+    kind: Deployment
+    result: pass
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: gooddeployment03
+    kind: Deployment
+    result: pass
+###### CronJobs - Bad
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: badcronjob01
+    kind: CronJob
+    result: fail
+###### CronJobs - Good
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: goodcronjob01
+    kind: CronJob
+    result: pass
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: goodcronjob02
+    kind: CronJob
+    result: pass
+  - policy: restrict-apparmor-profiles
+    rule: app-armor
+    resource: goodcronjob03
+    kind: CronJob
+    result: pass
