--- a/pod-security/baseline/restrict-apparmor-profiles/restrict-apparmor-profiles.yaml
+++ b/pod-security/baseline/restrict-apparmor-profiles/restrict-apparmor-profiles.yaml
@@ -8,11 +8,13 @@ metadata:
     policies.kyverno.io/severity: medium
     policies.kyverno.io/subject: Pod, Annotation
     policies.kyverno.io/minversion: 1.3.0
+    kyverno.io/kyverno-version: 1.6.0
+    kyverno.io/kubernetes-version: "1.22-1.23"
     policies.kyverno.io/description: >-
       On supported hosts, the 'runtime/default' AppArmor profile is applied by default.
       The default policy should prevent overriding or disabling the policy, or restrict
       overrides to an allowed set of profiles. This policy ensures Pods do not
-      specify any other AppArmor profiles than `runtime/default`.
+      specify any other AppArmor profiles than `runtime/default` or `localhost/*`.
 spec:
   validationFailureAction: audit
   background: true
@@ -25,9 +27,9 @@ spec:
       validate:
         message: >-
           Specifying other AppArmor profiles is disallowed. The annotation
-          container.apparmor.security.beta.kubernetes.io must not be defined,
-          or must not be set to anything other than `runtime/default`.
+          `container.apparmor.security.beta.kubernetes.io` if defined
+          must not be set to anything other than `runtime/default` or `localhost/*`.
         pattern:
-          metadata:
+          =(metadata):
             =(annotations):
-              =(container.apparmor.security.beta.kubernetes.io/*): "runtime/default"
+              =(container.apparmor.security.beta.kubernetes.io/*): "runtime/default | localhost/*"
