--- a/pod-security/restricted/restrict-volume-types/kyverno-test.yaml
+++ b/pod-security/restricted/restrict-volume-types/kyverno-test.yaml
@@ -1,16 +1,447 @@
 name: restrict-volume-types
 policies:
-  -  restrict-volume-types.yaml
+  - restrict-volume-types.yaml
 resources:
-  -  resource.yaml
+  - resource.yaml
 results:
+###### Pods - Bad
   - policy: restrict-volume-types
-    rule: restricted-vol-gcePersistentDisk
-    resource: gce-pd
+    rule: restricted-volumes
+    resource: badpod01
     kind: Pod
     result: fail
   - policy: restrict-volume-types
-    rule: restricted-vol-awsElasticBlockStore
-    resource: gce-pd
+    rule: restricted-volumes
+    resource: badpod02
     kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod03
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod04
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod05
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod06
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod07
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod08
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod09
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod10
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod11
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod12
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod13
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod14
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod15
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod16
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod17
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod18
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod19
+    kind: Pod
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badpod20
+    kind: Pod
+    result: fail
+###### Pods - Good
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodpod01
+    kind: Pod
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodpod02
+    kind: Pod
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodpod03
+    kind: Pod
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodpod04
+    kind: Pod
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodpod05
+    kind: Pod
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodpod06
+    kind: Pod
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodpod07
+    kind: Pod
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodpod08
+    kind: Pod
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodpod09
+    kind: Pod
+    result: pass
+###### Deployments - Bad
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment01
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment02
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment03
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment04
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment05
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment06
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment07
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment08
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment09
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment10
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment11
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment12
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment13
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment14
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment15
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment16
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment17
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment18
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment19
+    kind: Deployment
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: baddeployment20
+    kind: Deployment
+    result: fail
+###### Deployments - Good
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: gooddeployment01
+    kind: Deployment
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: gooddeployment02
+    kind: Deployment
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: gooddeployment03
+    kind: Deployment
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: gooddeployment04
+    kind: Deployment
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: gooddeployment05
+    kind: Deployment
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: gooddeployment06
+    kind: Deployment
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: gooddeployment07
+    kind: Deployment
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: gooddeployment08
+    kind: Deployment
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: gooddeployment09
+    kind: Deployment
+    result: pass
+###### CronJobs - Bad
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob01
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob02
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob03
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob04
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob05
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob06
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob07
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob08
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob09
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob10
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob11
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob12
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob13
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob14
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob15
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob16
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob17
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob18
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob19
+    kind: CronJob
+    result: fail
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: badcronjob20
+    kind: CronJob
+    result: fail
+###### CronJobs - Good
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodcronjob01
+    kind: CronJob
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodcronjob02
+    kind: CronJob
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodcronjob03
+    kind: CronJob
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodcronjob04
+    kind: CronJob
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodcronjob05
+    kind: CronJob
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodcronjob06
+    kind: CronJob
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodcronjob07
+    kind: CronJob
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodcronjob08
+    kind: CronJob
+    result: pass
+  - policy: restrict-volume-types
+    rule: restricted-volumes
+    resource: goodcronjob09
+    kind: CronJob
     result: pass
